--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Patternfly forms for uniforms",
   "repository": "git@github.com:aerogear/uniforms-patternfly.git",
   "author": "Gianluca <gzuccare@redhat.com>",
-  "license": "Apache-2.0", 
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build --incremental",
-    "buildProd": "tsc --build",
+    "buildProd": "rm -rf ./dist && tsc --build",
     "watch": "tsc --watch --incremental",
     "clean": "rimraf dist coverage tsconfig.tsbuildinfo && tsc",
     "coverage": "jest --coverage",
@@ -25,7 +25,7 @@
     "@babel/preset-typescript": "7.10.4",
     "@testing-library/react": "10.4.9",
     "@types/classnames": "2.2.10",
-    "@types/enzyme": "3.10.5",
+    "@types/enzyme": "3.10.8",
     "@types/invariant": "2.2.33",
     "@types/jest": "25.2.3",
     "@types/lodash": "4.14.149",
@@ -56,7 +56,7 @@
     "react-frame-component": "4.1.1",
     "react-test-renderer": "16.13.1",
     "rimraf": "2.6.3",
-    "simpl-schema": "1.9.0",
+    "simpl-schema": "1.10.2",
     "ts-jest": "25.3.1",
     "ts-node": "8.8.1",
     "tslib": "1.11.1",
@@ -65,8 +65,8 @@
     "uniforms-bridge-simple-schema-2": "3.0.0-rc.3"
   },
   "dependencies": {
-    "@patternfly/react-core": "4.45.1",
-    "@patternfly/react-icons": "4.7.2"
+    "@patternfly/react-core": "4.84.4",
+    "@patternfly/react-icons": "4.7.22"
   },
   "engines": {
     "npm": ">=5.0.0"
