Remove unused changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,16 @@
     "baseUrl": ".",
     "rootDir": "./src/",
     "outDir": "./dist/",
-    "composite": true,
     "declaration": true,
     "esModuleInterop": true,
     "importHelpers": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "noImplicitAny": false,
+    "skipLibCheck": true,
     "paths": {
       "uniforms": ["/node_modules/uniforms/es5"],
     },
-    "strict": false
+    "strict": true
   },
   "exclude": [
     "node_modules",
@@ -22,6 +21,6 @@
     "examples",
     "__tests__",
     "__mocks__",
-    "__dep",
+    "__dep"
   ]	  
 }
